# Easy-GPU-Passthrough-for-Linux

./: CMakeLists.txt  README.md
docs/: BUILD.md  RELEASE_NOTES.md  RISKS.md
hooks/: qemu
src/: common.cpp  common.h  ctl_main.cpp  gui_main.cpp  helperd_main.cpp
systemd/: gpu-switcher-boot.service  gpu-switcher-helperd.service
